[package]
name = "ultrack-td"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_rustlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
petgraph = { version = "0.8.2", features = ["serde"] }
ndarray = "0.15"
numpy = "0.25.0"
rand = "0.9.2"

[lints.clippy]
# Focus on basic correctness and style, not complexity
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Allow common patterns in numerical/PyO3 code
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_arguments = "allow"
ptr_arg = "allow"
